testament/tests/shouldfail/tworking_known_issue.nim
discard """
  description: "Test is marked as having known issues, but it succesfully runs"
  knownIssue: "Well, not really"
"""